[package]
name = "thirtyfour"
version = "0.29.0-rc.1"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.

It supports the full W3C WebDriver spec.
"""
homepage = "https://github.com/stevepryde/thirtyfour"
repository = "https://github.com/stevepryde/thirtyfour"
documentation = "https://docs.rs/thirtyfour"

readme = "README.md"
keywords = ["selenium", "webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

[features]
default = ["rusttls-tls"]
rusttls-tls = ["fantoccini/rustls-tls"]
native-tls = ["fantoccini/native-tls"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
cookie = { version = "0.16.0", features = ["percent-encode"] }
fantoccini = "0.19.0-rc.3"
futures = "0.3"
http = "0.2.6"
log = "0.4"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_repr = "0.1"
stringmatch = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
url = "2.2.2"
urlparse = "0.7"

[dev-dependencies]
assert_matches = "1.5.0"
color-eyre = "0.5"
regex = "1"

[[example]]
name = "tokio_async"

[[example]]
name = "tokio_basic"

[[example]]
name = "selenium_example"

[[example]]
name = "minimal_async"

[[example]]
name = "chrome_devtools"

[[example]]
name = "chrome_options"

[[example]]
name = "wikipedia"
path = "examples/query/wikipedia.rs"

[[example]]
name = "firefox_preferences"
path = "examples/firefox_preferences.rs"

[[example]]
name = "shadowroot"
