[package]
name = "thirtyfour"
version = "0.31.0"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.

It supports the full W3C WebDriver spec.
"""
homepage = "https://github.com/stevepryde/thirtyfour"
repository = "https://github.com/stevepryde/thirtyfour"
documentation = "https://docs.rs/thirtyfour"

readme = "README.md"
keywords = ["selenium", "webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

[features]
default = ["rusttls-tls"]
rusttls-tls = ["fantoccini/rustls-tls"]
native-tls = ["fantoccini/native-tls"]

[dependencies]
async-trait = "0.1.56"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
cookie = { version = "0.16.0", features = ["percent-encode"] }
fantoccini = { version = "0.19.1", default-features = false }
futures = "0.3.21"
http = "0.2.8"
log = "0.4.17"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_repr = "0.1.8"
stringmatch = "0.4.0"
thiserror = "1.0.31"
tokio = { version = "1.20", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
url = "2.2.2"
urlparse = "0.7.3"

[dev-dependencies]
assert_matches = "1.5.0"
color-eyre = "0.6.2"
hyper = { version = "0.14", features = ["server", "tcp"] }
regex = "1"
serial_test = "0.8"
time = "0.3"



[[example]]
name = "tokio_async"

[[example]]
name = "tokio_basic"

[[example]]
name = "selenium_example"

[[example]]
name = "minimal_async"

[[example]]
name = "chrome_devtools"

[[example]]
name = "chrome_options"

[[example]]
name = "wikipedia"
path = "examples/query/wikipedia.rs"

[[example]]
name = "firefox_preferences"
path = "examples/firefox_preferences.rs"

[[example]]
name = "shadowroot"
