[package]
name = "thirtyfour-examples"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
thirtyfour = { path = "../" }
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded"] }

[[bin]]
name = "async"
path = "src/async.rs"

[[bin]]
name = "sync"
path = "src/sync.rs"
