[package]
name = "thirtyfour-macros"
version = "0.1.2"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.
"""
homepage = "https://github.com/stevepryde/thirtyfour"
repository = "https://github.com/stevepryde/thirtyfour"
documentation = "https://docs.rs/thirtyfour_macros"

readme = "README.md"
keywords = ["selenium", "webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = { version = "2.0.70", features = ["full", "parsing", "extra-traits"] }
