[package]
name = "thirtyfour-macros"
version = "0.1.3"
authors = ["Steve Pryde <steve@stevepryde.com>", "Vrtgs"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.
"""
homepage = "https://github.com/Vrtgs/thirtyfour"
repository = "https://github.com/Vrtgs/thirtyfour"
documentation = "https://docs.rs/thirtyfour_macros"

readme = "README.md"
keywords = ["selenium", "webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
