[package]
name = "thirtyfour"
version = "0.33.0"
authors = ["Steve Pryde <steve@stevepryde.com>", "Vrtgs"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.

Tested on Chrome and Firefox, but any webdriver-capable browser should work.
"""
homepage = "https://github.com/Vrtgs/thirtyfour"
repository = "https://github.com/Vrtgs/thirtyfour"
documentation = "https://docs.rs/thirtyfour"

readme = "README.md"
keywords = [
    "selenium",
    "webdriver",
    "chromedriver",
    "geckodriver",
    "automation",
]
categories = [
    "api-bindings",
    "development-tools::testing",
    "web-programming::http-client",
]

[features]
default = ["reqwest", "rustls-tls", "component"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
component = ["thirtyfour-macros"]
debug_sync_quit = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures = "0.3.30"
http = "1"
indexmap = "2"
parking_lot = "0.12"
paste = "1"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_repr = "0.1.19"
stringmatch = "0.4"
strum = { version = "0.26", features = ["derive"] }
thirtyfour-macros = { path = "../thirtyfour-macros", version = "0.1.2", optional = true }
thiserror = "1.0.63"
arc-swap = "1"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
    "time",
] }
bytes = "1.6.1"
tracing = "0.1"
url = "2.5.2"

# Optional HTTP client. Not needed if you supply your own.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
], optional = true }
webdriver = "0.50.0"

[dev-dependencies]
assert_matches = "1.5"
axum = "0.7"
color-eyre = "0.6"
rstest = "0.21.0"
tower-http = { version = "0.5", features = ["fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[[example]]
name = "tokio_async"

[[example]]
name = "tokio_basic"

[[example]]
name = "selenium_example"

[[example]]
name = "minimal_async"

[[example]]
name = "chrome_devtools"

[[example]]
name = "chrome_options"

[[example]]
name = "wikipedia"
path = "examples/query/wikipedia.rs"

[[example]]
name = "custom_poller"
path = "examples/query/custom_poller.rs"

[[example]]
name = "firefox_preferences"
path = "examples/firefox_preferences.rs"

[[example]]
name = "shadowroot"

[[example]]
name = "playground"
path = "examples/components/playground.rs"
