[package]
name = "thirtyfour"
version = "0.36.1"
authors = ["Steve Pryde <steve@stevepryde.com>", "Vrtgs <vrtgs@vrtgs.xyz>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.

Tested on Chrome and Firefox, but any webdriver-capable browser should work.
"""
homepage = "https://github.com/Vrtgs/thirtyfour"
repository = "https://github.com/Vrtgs/thirtyfour"
documentation = "https://docs.rs/thirtyfour"

readme = "README.md"
keywords = [
    "selenium",
    "webdriver",
    "chromedriver",
    "geckodriver",
    "automation",
]
categories = [
    "api-bindings",
    "development-tools::testing",
    "web-programming::http-client",
]

[features]
default = ["reqwest", "rustls-tls", "component"]
reqwest = ["dep:reqwest"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
tokio-multi-threaded = ["tokio/rt-multi-thread"]
component = ["thirtyfour-macros"]
debug_sync_quit = []


[dependencies]
async-trait = "0.1.83"
base64 = "0.22"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
http = "1"
indexmap = "2"
paste = "1"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
serde_repr = "0.1.19"
stringmatch = "0.4"
thirtyfour-macros = { path = "../thirtyfour-macros", version = "0.2.0", optional = true }
thiserror = "2.0.12"
arc-swap = "1"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "time",
    "io-util",
    "sync",
] }
cfg-if = "1.0.0"
tracing = "0.1"
url = "2.5.2"
const_format = "0.2.33"

# Optional HTTP client. Not needed if you supply your own.
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
], optional = true }

[dev-dependencies]
assert_matches = "1.5"
axum = "0.7"
color-eyre = "0.6"
rstest = { version = "0.25.0", default-features = false }
tower-http = { version = "0.6", features = ["fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serial_test = "3.2.0"

[[example]]
name = "tokio_async"

[[example]]
name = "tokio_basic"

[[example]]
name = "selenium_example"

[[example]]
name = "minimal_async"

[[example]]
name = "chrome_devtools"

[[example]]
name = "chrome_options"

[[example]]
name = "wikipedia"
path = "examples/query/wikipedia.rs"

[[example]]
name = "custom_poller"
path = "examples/query/custom_poller.rs"

[[example]]
name = "firefox_preferences"
path = "examples/firefox_preferences.rs"

[[example]]
name = "shadowroot"

[[example]]
name = "playground"
path = "examples/components/playground.rs"
