[package]
name = "thirtyfour_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
quote = "1.0"
itertools = "0.10.3"
